# pyoda-time

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE.txt  README.md  my-key.asc  pyproject.toml  renovate.json  requirements.txt  version.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: bumpversion.yml  ci.yml  on-commit.yml  pythonpublish.yml  release.yml  test.yml
docs/source/: conf.py  index.rst  modules.rst  pyoda_time.calendars.rst  pyoda_time.fields.rst  pyoda_time.globalization.rst  pyoda_time.rst  pyoda_time.testing.rst  pyoda_time.testing.time_zones.rst  pyoda_time.text.patterns.rst  pyoda_time.text.rst  pyoda_time.time_zones.cldr.rst  pyoda_time.time_zones.io.rst  pyoda_time.time_zones.rst  pyoda_time.utility.rst
pyoda_time/: __init__.py  _ambiguous_time_error.py  _annual_date.py  _calendar_ordinal.py  _calendar_system.py  _date_adjusters.py  _date_interval.py  _date_time_zone.py  _date_time_zone_providers.py  _duration.py  _i_clock.py  _i_date_time_zone_provider.py  _instant.py  _interval.py  _iso_day_of_week.py  _local_date.py  _local_date_time.py  _local_instant.py  _local_time.py  _offset.py  _offset_date.py  _offset_date_time.py  _offset_time.py  _period.py  _period_builder.py  _period_units.py  _pyoda_constants.py  _skipped_time_error.py  _system_clock.py  _time_adjusters.py  _year_month.py  _year_month_day.py  _year_month_day_calendar.py  _zoned_clock.py  _zoned_date_time.py  calendars.py  compatibility.py  duration.py  fields.py  instant.py  (+4 more)
pyoda_time/_compatibility/: __init__.py  _argument_exception.py  _calendar.py  _calendar_data.py  _calendar_id.py  _culture_data.py  _culture_info.py  _culture_not_found_exception.py  _culture_types.py  _date_time_format_info.py  _day_of_week.py  _globalization_mode.py  _gregorian_calendar.py  _gregorian_calendar_helper.py  _gregorian_calendar_types.py  _hebrew_calendar.py  _hijri_calendar.py  _i_format_provider.py  _icu_locale_data.py  _interop.py  _japanese_calendar.py  _korean_calendar.py  _number_format_info.py  _persian_calendar.py  _string_builder.py  _taiwan_calendar.py  _text_info.py  _thai_buddhist_calendar.py  _um_al_qura_calendar.py
pyoda_time/calendars/: __init__.py  _badi_year_month_day_calculator.py  _calendar_week_rule.py  _coptic_year_month_day_calculator.py  _era.py  _era_calculator.py  _fixed_month_year_month_day_calculator.py  _g_j_era_calculator.py  _g_j_year_month_day_calculator.py  _gregorian_year_month_day_calculator.py  _hebrew_month_converter.py  _hebrew_month_numbering.py  _hebrew_scriptural_calculator.py  _hebrew_year_month_day_calculator.py  _i_week_year_rule.py  _islamic_epoch.py  _islamic_leap_year_pattern.py  _islamic_year_month_day_calculator.py  _julian_year_month_day_calculator.py  _persian_year_month_day_calculator.py  _regular_year_month_day_calculator.py  _simple_week_year_rule.py  _single_era_calculator.py  _um_al_qura_year_month_day_calculator.py  _week_year_rules.py  _year_month_day_calculator.py  _year_start_cache_entry.py
pyoda_time/fields/: __init__.py  _date_period_fields.py  _fixed_length_date_period_field.py  _i_date_period_field.py  _months_period_field.py  _time_period_field.py  _years_period_field.py
pyoda_time/globalization/: __init__.py  _pattern_resources.py  _pyoda_format_info.py
pyoda_time/testing/: __init__.py  _fake_clock.py
pyoda_time/text/: __init__.py  _annual_date_pattern.py  _annual_date_pattern_parser.py  _composite_pattern_builder.py  _duration_pattern.py  _duration_pattern_parser.py  _fixed_format_info_pattern_parser.py  _format_helper.py  _i_partial_pattern.py  _i_pattern.py  _instant_pattern.py  _instant_pattern_parser.py  _invalid_pattern_exception.py  _local_date_pattern.py  _local_date_pattern_parser.py  _local_date_time_pattern.py  _local_date_time_pattern_parser.py  _local_time_pattern.py  _local_time_pattern_parser.py  _offset_pattern.py  _offset_pattern_parser.py  _parse_bucket.py  _parse_result.py  _text_cursor.py  _text_error_messages.py  _unparsable_value_error.py  _value_cursor.py
pyoda_time/time_zones/: __init__.py  _cached_date_time_zone.py  _caching_zone_interval_map.py  _date_time_zone_cache.py  _date_time_zone_not_found_error.py  _delegates.py  _fixed_date_time_zone.py  _i_date_time_zone_source.py  _i_zone_interval_map.py  _invalid_date_time_zone_source_error.py  _precalculated_date_time_zone.py  _resolvers.py  _standard_daylight_alternating_map.py  _transition.py  _transition_mode.py  _tzdb_date_time_zone_source.py  _tzdb_zone_1970_location.py  _tzdb_zone_location.py  _zone_interval.py  _zone_local_mapping.py  _zone_recurrence.py  _zone_year_offset.py
pyoda_time/utility/: __init__.py  _cache.py  _csharp_compatibility.py  _hash_code_helper.py  _invalid_pyoda_data_exception.py  _preconditions.py  _tick_arithmetic.py  tick_arithmetic.py
tests/: culture_saver.py  helpers.py  test_annual_date.py  test_calendar_system.py  test_comparison_operator_consistency.py  test_date_adjusters.py  test_date_interval.py  test_date_time_zone.py  test_duration.py  test_instant.py  test_interval.py  test_license.py  test_local_date.py  test_local_date_time.py  test_local_instant.py  test_local_time.py  test_offset.py  test_offset_date.py  test_offset_date_time.py  test_offset_time.py  test_period.py  test_period_builder.py  test_public_api.py  test_system_clock.py  test_time_adjusters.py  test_utility.py  test_version.py  test_year_month.py  test_year_month_day_calendar.py  test_zoned_clock.py
tests/_compatibility/: test_culture_info.py
tests/calendars/: test_badi_calendar_system.py  test_coptic_calendar_system.py  test_era.py  test_gregorian_calendar_system.py  test_hebrew_calendar_system.py  test_hebrew_ecclesiastical_calculator.py  test_hebrew_month_converter.py  test_islamic_calendar_system.py  test_iso_calendar.py  test_julian_calendar_system.py  test_persian_calendar_system.py  test_simple_week_year_rule.py  test_um_al_qura_year_month_day_calculator.py  test_week_year_rules.py  test_year_month_day_calculator.py
tests/extensions/: test_clock_extensions.py
(+61 files in other folders)
